fix select focus state visibility in firefox

--- a/src/styles/embeds/sass/components/select.css
+++ b/src/styles/embeds/sass/components/select.css
@@ -4,7 +4,6 @@
   box-sizing: border-box;
   position: relative;
   background: var(--color-white);
-  overflow: hidden;
   vertical-align: bottom;
 }
 
